--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
 		"expo-linking": "~6.3.1",
 		"expo-router": "~3.5.23",
 		"expo-status-bar": "~1.12.1",
+		"expo-vector-icons": "^10.0.1",
 		"react": "18.2.0",
 		"react-native": "0.74.5",
+		"react-native-fast-image": "^8.6.3",
+		"react-native-loader-kit": "^2.0.8",
 		"react-native-safe-area-context": "4.10.5",
 		"react-native-screens": "3.31.1"
 	},
